# Dealio

./: CLAUDE.md  compose.yaml  extract_lld_data.py  main.py  pyproject.toml
services/monitor_lambda/: .env  check_lambda.py  main.py  pyproject.toml
services/monitor_lambda/monitor_lambda/domains/monitor/: exceptions.py
services/monitor_lambda/monitor_lambda/domains/monitor/adapters/: local_scraper_adapter.py  scraper_lambda_client.py  ses_email_sender.py  sqlalchemy_notification_write_repository.py  sqlalchemy_price_check_log_repository.py  sqlalchemy_tracked_product_repository.py
services/monitor_lambda/monitor_lambda/domains/monitor/flows/: price_check_cycle_flow.py
services/monitor_lambda/monitor_lambda/domains/monitor/jobs/: handler.py
services/monitor_lambda/monitor_lambda/domains/monitor/ports/: __init__.py  email_sender.py  notification_write_repository.py  price_check_log_repository.py  scraper_port.py  tracked_product_repository.py
services/monitor_lambda/monitor_lambda/domains/scraper/adapters/: gemini_llm_client.py  openai_llm_client.py
services/monitor_lambda/monitor_lambda/domains/scraper/flows/: fetch_page.py  preprocess_html.py  scrape_flow.py
services/monitor_lambda/monitor_lambda/infrastructure/: settings.py
services/monitor_lambda/monitor_lambda/infrastructure/database/: base.py
services/pipeline/: main_db_update.py  main_email.py  main_monitor.py  main_scraper.py  pyproject.toml
services/pipeline/pipeline/domains/email/: exceptions.py
services/pipeline/pipeline/domains/monitor/: exceptions.py
services/pipeline/pipeline/shared/infrastructure/: database.py  logger.py  settings.py
services/pipeline/pipeline/shared/orm/: base.py  notification_record.py  price_check_log_record.py  tracked_product_record.py  user_record.py
services/pipeline/pipeline/shared/scraper_domain/: __init__.py
services/scraper_lambda/: pyproject.toml
services/scraper_lambda/scraper_lambda/domains/scraper/: exceptions.py
services/webapp/: .env  alembic.ini  pyproject.toml
services/webapp/alembic/: env.py
services/webapp/alembic/versions/: 0001_initial_schema.py
services/webapp/webapp/: config.py  dependencies.py  main.py  middleware.py
services/webapp/webapp/domains/identity/: exceptions.py
services/webapp/webapp/domains/notifier/: exceptions.py
services/webapp/webapp/domains/tracker/: exceptions.py
services/webapp/webapp/infrastructure/database/: __init__.py  base.py
(+478 files in other folders)
