[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monitor_lambda"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "boto3>=1.36",
    "structlog>=24.4",
    "httpx>=0.28",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "openai>=1.0",
    "google-genai>=1.0",
    "pydantic>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["monitor_lambda"]
