[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scraper_lambda"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "structlog>=24.4",
    "openai>=1.0",
    "google-generativeai>=0.8",
    "pydantic>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["scraper_lambda"]
