[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webapp"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic[email]>=2.10",
    "pydantic-settings>=2.7",
    "authlib>=1.3",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "httpx>=0.28",
    "boto3>=1.36",
    "structlog>=24.4",
]

[tool.hatch.build.targets.wheel]
packages = ["webapp"]
